:sparkles: add sample notebook

--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -29,31 +29,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from submodules import hoge"
+    "import pandas as pd\n",
+    "from pandas_profiling import ProfileReport\n",
+    "from utils import inverse_cor, estimate, deviance_and_p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "045755dd-8926-43bf-9b9d-c3b447f29767",
+   "execution_count": null,
+   "id": "fff79a8f-3ab0-47e3-902d-ab30dc9a6c3d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-05-17 14:49:57 submodules.submodule[hoge]: [INFO] hoge\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hoge()"
+    "path = '../data/hoge.csv'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4df15114-529b-41d8-a335-83778fdda45e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(path)\n",
+    "print(df.shape)\n",
+    "display(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b92b75d-3035-4bfb-b8ba-95b4e72c195f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profiling = ProfileReport(df)\n",
+    "profiling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ecad5c6-73a3-4aac-9dd7-834260915271",
    "metadata": {},
    "outputs": [],
    "source": []
